added social icons first time - hero section

--- a/app/html-dev/parts/sections/hero_section.html
+++ b/app/html-dev/parts/sections/hero_section.html
@@ -2,7 +2,19 @@
     <div class="container">
         <div class="section-hero--team">
             <div class="section-hero--team-member">
-                
+                <div class="team-member--social">
+                    <ul class="team-member--icons">
+                        <li class="team-member--icon">
+                            <a href="#"><img src="../../../img/icons-linkedin.svg" alt="linkedin"></a>
+                        </li>
+                        <li class="team-member--icon">
+                            <a href="#"><img src="../../../img/icons-fb-messanger.svg" alt="fb-messenger"></a>
+                        </li>
+                        <li class="team-member--icon">
+                            <a href="#"><img src="../../../img/icons-twitter.svg" alt="twitter"></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
