created first team member card draft

--- a/app/html-dev/parts/sections/hero_section.html
+++ b/app/html-dev/parts/sections/hero_section.html
@@ -1,19 +1,43 @@
+<!--Hero section -->
 <section class="section section-hero">
     <div class="container">
+
+        <!--Team members list started-->
         <div class="section-hero--team">
-            <div class="section-hero--team-member">
-                <div class="team-member--social">
-                    <ul class="team-member--icons">
+            <div class="section-hero--team-members-list">
+
+                <!--Team member-->
+                <div class="section-hero--team-member team-member--first">
+
+                    <!--Social icons block-->
+                    <ul class="team-member--social-icons">
                         <li class="team-member--icon">
-                            <a href="#"><img src="../../../img/icons-linkedin.svg" alt="linkedin"></a>
+                            <a href="#"><img src="img/icons-linkedin.svg" alt="linkedin"></a>
                         </li>
                         <li class="team-member--icon">
-                            <a href="#"><img src="../../../img/icons-fb-messanger.svg" alt="fb-messenger"></a>
+                            <a href="#"><img src="img/icons-fb-messenger.svg" alt="fb-messenger"></a>
                         </li>
                         <li class="team-member--icon">
-                            <a href="#"><img src="../../../img/icons-twitter.svg" alt="twitter"></a>
+                            <a href="#"><img src="img/icons-twitter.svg" alt="twitter"></a>
                         </li>
                     </ul>
+
+                    <!--Image block-->
+                    <div class="team-member--person-card person-card--first">
+                        <div class="team-member-img-wrapper">
+                            <div class="team-member-frame team-member-frame--top"></div>
+                            <div class="team-member-frame team-member-frame--bottom"></div>
+                            <div class="team-member--portrait">
+                                <img src="img/portrait-team-member-1.jpg" alt="portrait-team-member-1">
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--Team member label-->
+                    <div class="team-member--text-info">
+                        <h4 class="team-member--name">John Doe</h4>
+                        <p class="team-member--role">Managing Partner</p>
+                    </div>
                 </div>
             </div>
         </div>
