added decor triangle solution

--- a/app/html-dev/parts/sections/hero_section.html
+++ b/app/html-dev/parts/sections/hero_section.html
@@ -25,7 +25,9 @@
                     <!--Image block-->
                     <div class="team-member--person-card person-card--first">
                         <div class="team-member-img-wrapper">
-                            <div class="team-member-frame team-member-frame--top"></div>
+                            <div class="team-member-frame team-member-frame--top">
+                                <div class="team-member-decor-triangle triangle-down"></div>
+                            </div>
                             <div class="team-member-frame team-member-frame--bottom"></div>
                             <div class="team-member--portrait">
                                 <img src="img/portrait-team-member-1.jpg" alt="portrait-team-member-1">
