added rest decor triangles on team member

--- a/app/html-dev/parts/sections/hero_section.html
+++ b/app/html-dev/parts/sections/hero_section.html
@@ -27,8 +27,14 @@
                         <div class="team-member-img-wrapper">
                             <div class="team-member-frame team-member-frame--top">
                                 <div class="team-member-decor-triangle triangle-down"></div>
+                                <div class="team-member-decor-triangle triangle-half-left"></div>
+                                <div class="team-member-decor-triangle triangle-half-right"></div>
                             </div>
-                            <div class="team-member-frame team-member-frame--bottom"></div>
+                            <div class="team-member-frame team-member-frame--bottom">
+                                <div class="team-member-decor-triangle triangle-up"></div>
+                                <div class="team-member-decor-triangle triangle-half-left"></div>
+                                <div class="team-member-decor-triangle triangle-half-right"></div>
+                            </div>
                             <div class="team-member--portrait">
                                 <img src="img/portrait-team-member-1.jpg" alt="portrait-team-member-1">
                             </div>
