changed team member cart - from img tag to div with bg

--- a/app/html-dev/parts/sections/hero_section.html
+++ b/app/html-dev/parts/sections/hero_section.html
@@ -36,7 +36,7 @@
                                 <div class="team-member-decor-triangle triangle-half-right"></div>
                             </div>
                             <div class="team-member--portrait">
-                                <img src="img/portrait-team-member-1.jpg" alt="portrait-team-member-1">
+                                <div class="team-member--portrait-img"></div>
                             </div>
                         </div>
                     </div>
