added basic structure with new user cards

--- a/app/html-dev/parts/sections/hero_section.html
+++ b/app/html-dev/parts/sections/hero_section.html
@@ -23,7 +23,133 @@
                     </ul>
 
                     <!--Image block-->
-                    <div class="team-member--person-card person-card--first">
+                    <div class="team-member--person-card">
+                        <div class="team-member-img-wrapper">
+                            <div class="team-member-frame team-member-frame--top">
+                                <div class="team-member-decor-triangle triangle-down"></div>
+                                <div class="team-member-decor-triangle triangle-half-left"></div>
+                                <div class="team-member-decor-triangle triangle-half-right"></div>
+                            </div>
+                            <div class="team-member-frame team-member-frame--bottom">
+                                <div class="team-member-decor-triangle triangle-up"></div>
+                                <div class="team-member-decor-triangle triangle-half-left"></div>
+                                <div class="team-member-decor-triangle triangle-half-right"></div>
+                            </div>
+                            <div class="team-member--portrait">
+                                <div class="team-member--portrait-img"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--Team member label-->
+                    <div class="team-member--text-info">
+                        <h4 class="team-member--name">John Doe</h4>
+                        <p class="team-member--role">Managing Partner</p>
+                    </div>
+                </div>
+
+                <!--Team member-->
+                <div class="section-hero--team-member team-member--second">
+
+                    <!--Social icons block-->
+                    <ul class="team-member--social-icons">
+                        <li class="team-member--icon">
+                            <a href="#"><img src="img/icons-linkedin.svg" alt="linkedin"></a>
+                        </li>
+                        <li class="team-member--icon">
+                            <a href="#"><img src="img/icons-fb-messenger.svg" alt="fb-messenger"></a>
+                        </li>
+                        <li class="team-member--icon">
+                            <a href="#"><img src="img/icons-twitter.svg" alt="twitter"></a>
+                        </li>
+                    </ul>
+
+                    <!--Image block-->
+                    <div class="team-member--person-card">
+                        <div class="team-member-img-wrapper">
+                            <div class="team-member-frame team-member-frame--top">
+                                <div class="team-member-decor-triangle triangle-down"></div>
+                                <div class="team-member-decor-triangle triangle-half-left"></div>
+                                <div class="team-member-decor-triangle triangle-half-right"></div>
+                            </div>
+                            <div class="team-member-frame team-member-frame--bottom">
+                                <div class="team-member-decor-triangle triangle-up"></div>
+                                <div class="team-member-decor-triangle triangle-half-left"></div>
+                                <div class="team-member-decor-triangle triangle-half-right"></div>
+                            </div>
+                            <div class="team-member--portrait">
+                                <div class="team-member--portrait-img"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--Team member label-->
+                    <div class="team-member--text-info">
+                        <h4 class="team-member--name">John Doe</h4>
+                        <p class="team-member--role">Managing Partner</p>
+                    </div>
+                </div>
+
+                <!--Team member-->
+                <div class="section-hero--team-member team-member--third">
+
+                    <!--Social icons block-->
+                    <ul class="team-member--social-icons">
+                        <li class="team-member--icon">
+                            <a href="#"><img src="img/icons-linkedin.svg" alt="linkedin"></a>
+                        </li>
+                        <li class="team-member--icon">
+                            <a href="#"><img src="img/icons-fb-messenger.svg" alt="fb-messenger"></a>
+                        </li>
+                        <li class="team-member--icon">
+                            <a href="#"><img src="img/icons-twitter.svg" alt="twitter"></a>
+                        </li>
+                    </ul>
+
+                    <!--Image block-->
+                    <div class="team-member--person-card">
+                        <div class="team-member-img-wrapper">
+                            <div class="team-member-frame team-member-frame--top">
+                                <div class="team-member-decor-triangle triangle-down"></div>
+                                <div class="team-member-decor-triangle triangle-half-left"></div>
+                                <div class="team-member-decor-triangle triangle-half-right"></div>
+                            </div>
+                            <div class="team-member-frame team-member-frame--bottom">
+                                <div class="team-member-decor-triangle triangle-up"></div>
+                                <div class="team-member-decor-triangle triangle-half-left"></div>
+                                <div class="team-member-decor-triangle triangle-half-right"></div>
+                            </div>
+                            <div class="team-member--portrait">
+                                <div class="team-member--portrait-img"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--Team member label-->
+                    <div class="team-member--text-info">
+                        <h4 class="team-member--name">John Doe</h4>
+                        <p class="team-member--role">Principal</p>
+                    </div>
+                </div>
+
+                <!--Team member-->
+                <div class="section-hero--team-member team-member--fourth">
+
+                    <!--Social icons block-->
+                    <ul class="team-member--social-icons">
+                        <li class="team-member--icon">
+                            <a href="#"><img src="img/icons-linkedin.svg" alt="linkedin"></a>
+                        </li>
+                        <li class="team-member--icon">
+                            <a href="#"><img src="img/icons-fb-messenger.svg" alt="fb-messenger"></a>
+                        </li>
+                        <li class="team-member--icon">
+                            <a href="#"><img src="img/icons-twitter.svg" alt="twitter"></a>
+                        </li>
+                    </ul>
+
+                    <!--Image block-->
+                    <div class="team-member--person-card">
                         <div class="team-member-img-wrapper">
                             <div class="team-member-frame team-member-frame--top">
                                 <div class="team-member-decor-triangle triangle-down"></div>
