--- a/app/html-dev/parts/footer.html
+++ b/app/html-dev/parts/footer.html
@@ -4,4 +4,5 @@
 
 
 <script src="libs/jquery/jquery.min.js"></script>
+<script src="libs/swiper/swiper-bundle.min.js"></script>
 <script src="js/main.js"></script>
