--- a/app/html-dev/parts/head.html
+++ b/app/html-dev/parts/head.html
@@ -13,6 +13,6 @@
 	<link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#eb6246" />
 	<link rel="manifest" href="img/favicon/site.webmanifest" />
 	<link rel="shortcut icon" href="img/favicon/favicon.ico" />
-	<link rel="stylesheet" href="libs/swiper/swiper-bundle.min.css">
+	<link rel="stylesheet" type="text/css" href="libs/slick/slick.css"/>
 	<link rel="stylesheet" href="css/main.css" />
 </head>
