added basic styles to the right cart

--- a/app/html-dev/parts/sections/about_us_section.html
+++ b/app/html-dev/parts/sections/about_us_section.html
@@ -9,11 +9,13 @@
                 </div>
             </div>
             <div class="section-about-us--column column column--half-width column--with-information">
-                <h2 class="section-about-us--title">Our way</h2>
-                <div class="section-about-us--text">
-                    <p class="section-about-us--paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic maiores nihil nulla placeat porro veritatis. Ad asperiores distinctio eligendi, impedit in perferendis? Aliquam ducimus enim eveniet, id nemo soluta voluptate.</p>
-                    <p class="section-about-us--paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic maiores nihil nulla placeat porro veritatis. Ad asperiores distinctio eligendi, impedit in perferendis? Aliquam ducimus enim eveniet, id nemo soluta voluptate.</p>
-                    <button class="button section-about-us--button">More about us</button>
+                <div class="section-about-us--card">
+                    <h2 class="section-about-us--title">Our way</h2>
+                    <div class="section-about-us--text">
+                        <p class="section-about-us--paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic maiores nihil nulla placeat porro veritatis. Ad asperiores distinctio eligendi, impedit in perferendis? Aliquam ducimus enim eveniet, id nemo soluta voluptate.</p>
+                        <p class="section-about-us--paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic maiores nihil nulla placeat porro veritatis. Ad asperiores distinctio eligendi, impedit in perferendis? Aliquam ducimus enim eveniet, id nemo soluta voluptate.</p>
+                        <button class="button section-about-us--button">More about us</button>
+                    </div>
                 </div>
             </div>
         </div>
