--- a/app/html-dev/parts/sections/about_us_section.html
+++ b/app/html-dev/parts/sections/about_us_section.html
@@ -2,14 +2,25 @@
 <section class="section section-about-us">
     <div class="container">
         <div class="row section-about-us--row">
+
+            <!-- About us - animation block -->
             <div class="section-about-us--column column column--half-width column--with-animation">
                 <div class="animation-block-wrapper">
                     <img src="img/mill-wings.svg" alt="mill-wings">
                     <img src="img/mill-body.svg" alt="mill-body">
                 </div>
             </div>
+
+            <!-- About us - content card block -->
             <div class="section-about-us--column column column--half-width column--with-information">
                 <div class="section-about-us--card">
+
+                    <!-- About us - decorative elements -->
+                    <div class="about-us-decor-triangle about-us-decor-triangle--top"></div>
+                    <div class="about-us-decor-triangle about-us-decor-triangle--right"></div>
+                    <div class="about-us-decor-triangle about-us-decor-triangle--bottom"></div>
+                    <div class="about-us-decor-triangle about-us-decor-triangle--left"></div>
+
                     <h2 class="section-about-us--title">Our way</h2>
                     <div class="section-about-us--text">
                         <p class="section-about-us--paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic maiores nihil nulla placeat porro veritatis. Ad asperiores distinctio eligendi, impedit in perferendis? Aliquam ducimus enim eveniet, id nemo soluta voluptate.</p>
