created draft version of mill animation

--- a/app/html-dev/parts/sections/about_us_section.html
+++ b/app/html-dev/parts/sections/about_us_section.html
@@ -5,9 +5,9 @@
 
             <!-- About us - animation block -->
             <div class="section-about-us--column column column--half-width column--with-animation">
-                <div class="animation-block-wrapper">
-                    <img src="img/mill-wings.svg" alt="mill-wings">
-                    <img src="img/mill-body.svg" alt="mill-body">
+                <div class="about-us--animation-block-wrapper">
+                    <img class="about-us--img-mill-wings" src="img/mill-wings.svg" alt="mill-wings">
+                    <img class="about-us--img-mill-body" src="img/mill-body.svg" alt="mill-body">
                 </div>
             </div>
 
