started the development of contact us section

--- a/app/html-dev/index.html
+++ b/app/html-dev/index.html
@@ -10,6 +10,7 @@
 	<main>
 		//= parts/sections/hero_section
 		//= parts/sections/about_us_section
+		//= parts/sections/contact_us_section
 	</main>
 	
 	<div class="hidden"></div>
