--- a/app/html-dev/parts/sections/contact_us_section.html
+++ b/app/html-dev/parts/sections/contact_us_section.html
@@ -1,20 +1,36 @@
 <!--Contact us section -->
 <section class="section section-contact-us">
-    <div class="container">
+    <div class="container container--contact-us">
         <h2 class="contact-us--heading">Contact</h2>
-        <div class="contact-from-wrapper">
+        <div class="contact-form-wrapper">
+
+            <!-- Contact Form -->
             <form action="#">
                 <div class="contact-form--row">
                     <label class="contact-form--label-block">
                         <span class="contact-form--label-text">Name</span>
-                        <input class="input-field input-field--name" type="text" name="user_name">
+                        <input class="input-field input-field--name" type="text" name="user_name" placeholder="John Doe">
                     </label>
                 </div>
                 <div class="contact-form--row">
                     <label class="contact-form--label-block">
                         <span class="contact-form--label-text">Email</span>
-                        <input class="input-field input-field--email" type="email" name="user_email">
+                        <input class="input-field input-field--email" type="email" name="user_email" placeholder="johndoe@gmail.com">
                     </label>
+                </div>
+                <div class="contact-form--row">
+                    <label class="contact-form--label-block">
+                        <span class="contact-form--label-text">Your Message</span>
+                        <textarea class="input-field input-field--email"  name="user_message" placeholder="Tell us what you need and we’ll take care of the rest."></textarea>
+                    </label>
+                </div>
+                <div class="contact-form--row">
+                    <div class="contact-form--recaptcha-block">
+                        Here would be recaptcha
+                    </div>
+                    <div class="contact-form--submit-btn-block">
+                        <input class="input-field" type="submit" value="Send Message">
+                    </div>
                 </div>
             </form>
         </div>
