added parsley lib for validatation - basic configurations

--- a/app/html-dev/parts/footer.html
+++ b/app/html-dev/parts/footer.html
@@ -5,4 +5,5 @@
 
 <script src="libs/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="libs/slick/slick.min.js"></script>
+<script src="libs/parsley/parsley.min.js"></script>
 <script src="js/main.js"></script>
