--- a/app/html-dev/parts/sections/contact_us_section.html
+++ b/app/html-dev/parts/sections/contact_us_section.html
@@ -5,31 +5,31 @@
         <div class="contact-form-wrapper">
 
             <!-- Contact Form -->
-            <form action="#">
+            <form id="contactForm" class="contact-form--main-form" action="#" data-parsley-validate="">
                 <div class="contact-form--row">
                     <label class="contact-form--label-block">
                         <span class="contact-form--label-text">Name</span>
-                        <input class="input-field input-field--name" type="text" name="user_name" placeholder="John Doe">
+                        <input class="input-field input-field--name" type="text" name="user_name" placeholder="John Doe" required>
                     </label>
                 </div>
                 <div class="contact-form--row">
                     <label class="contact-form--label-block">
                         <span class="contact-form--label-text">Email</span>
-                        <input class="input-field input-field--email" type="email" name="user_email" placeholder="johndoe@gmail.com">
+                        <input class="input-field input-field--email" type="email" name="user_email" placeholder="johndoe@gmail.com" data-parsley-trigger="change" required>
                     </label>
                 </div>
                 <div class="contact-form--row">
                     <label class="contact-form--label-block">
                         <span class="contact-form--label-text">Your Message</span>
-                        <textarea class="input-field input-field--textarea"  name="user_message" placeholder="Tell us what you need and we’ll take care of the rest."></textarea>
+                        <textarea class="input-field input-field--textarea" name="user_message" placeholder="Tell us what you need and we’ll take care of the rest." required></textarea>
                     </label>
                 </div>
                 <div class="contact-form--row contact-form--row-with-recaptcha-and-submit">
                     <div class="contact-form--recaptcha-block">
-                        Here would be recaptcha
+                        <!-- Here would be recaptcha -->
                     </div>
                     <div class="contact-form--submit-btn-block">
-                        <input class="input-field input-field--submit-button" type="submit" value="Send Message">
+                        <input id="submitButton" class="input-field input-field--submit-button" type="submit" value="Send Message" disabled>
                     </div>
                 </div>
             </form>
