added Google Recaptcha Block

--- a/app/html-dev/parts/sections/contact_us_section.html
+++ b/app/html-dev/parts/sections/contact_us_section.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="contact-form--row contact-form--row-with-recaptcha-and-submit">
                     <div class="contact-form--recaptcha-block">
-                        <!-- Here would be recaptcha -->
+                        <div class="g-recaptcha" data-sitekey="6LceMpQpAAAAAAU_5sJI6hia5CvFOc6vcGYK9emB"></div>
                     </div>
                     <div class="contact-form--submit-btn-block">
                         <input id="submitButton" class="input-field input-field--submit-button" type="submit" value="Send Message" disabled>
