--- a/app/html-dev/parts/head.html
+++ b/app/html-dev/parts/head.html
@@ -15,4 +15,5 @@
 	<link rel="shortcut icon" href="img/favicon/favicon.ico" />
 	<link rel="stylesheet" type="text/css" href="libs/slick/slick.css"/>
 	<link rel="stylesheet" href="css/main.css" />
+	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
