--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
 	<link rel="shortcut icon" href="img/favicon/favicon.ico" />
 	<link rel="stylesheet" type="text/css" href="libs/slick/slick.css"/>
 	<link rel="stylesheet" href="css/main.css" />
+	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
 <body>
@@ -268,7 +269,7 @@
 		                </div>
 		                <div class="contact-form--row contact-form--row-with-recaptcha-and-submit">
 		                    <div class="contact-form--recaptcha-block">
-		                        <!-- Here would be recaptcha -->
+		                        <div class="g-recaptcha" data-sitekey="6LceMpQpAAAAAAU_5sJI6hia5CvFOc6vcGYK9emB"></div>
 		                    </div>
 		                    <div class="contact-form--submit-btn-block">
 		                        <input id="submitButton" class="input-field input-field--submit-button" type="submit" value="Send Message" disabled>
